<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_call_taxi"
            android:icon="@drawable/ic_call_taxi"
            android:title="@string/item_call_taxi"
            />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/item_profile"
            />
        <item
            android:id="@+id/nav_my_location"
            android:icon="@drawable/ic_my_location"
            android:title="@string/item_my_location"
            />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/item_history"
            />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/item_share"
            />
        <item
            android:id="@+id/nav_comment"
            android:icon="@drawable/ic_comment"
            android:title="@string/item_comment"
            />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/item_logout"
            />
    </group>

</menu>
