<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="taxi.lemon.fragments.UpdateNameFragment"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/et_first_name"
            style="@style/AppTheme.EditText"
            android:hint="@string/unf_first_name"
            android:nextFocusDown="@+id/et_middle_name"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/et_middle_name"
            style="@style/AppTheme.EditText"
            android:hint="@string/unf_middle_name"
            android:nextFocusDown="@+id/et_last_name"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/et_last_name"
            style="@style/AppTheme.EditText"
            android:hint="@string/unf_last_name"
            />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_confirm"
        style="@style/AppTheme.Button"
        android:text="@string/rf_btn_confirm"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
