<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/pa_section_comment"
        style="@style/AppTheme.PreferencesSection"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="start"
            android:text="@string/pa_comment_init_content"
            />

        <ImageButton
            android:id="@+id/ib_edit_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:layout_gravity="top"
            android:contentDescription="@string/content_icon"
            style="@style/AppTheme.BorderlessButton"/>

    </LinearLayout>
</LinearLayout>