<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/divider"/>

    <TextView
        style="@style/AppTheme.PreferencesSection"
        android:text="@string/pa_section_pre_order_time"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/pa_date"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="start"
            android:text="@string/pa_pre_order_time_undefined"
            />

        <ImageButton
            android:id="@+id/ib_edit_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:layout_gravity="top"
            android:contentDescription="@string/content_icon"
            style="@style/AppTheme.BorderlessButton"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/pa_time"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="start"
            android:text="@string/pa_pre_order_time_undefined"
            />

        <ImageButton
            android:id="@+id/ib_edit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:layout_gravity="top"
            android:contentDescription="@string/content_icon"
            style="@style/AppTheme.BorderlessButton"/>

    </LinearLayout>
</LinearLayout>