<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="digitalpromo.cabsdemo.fragments.UpdatePasswordFragment"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/et_old_password"
            android:hint="@string/upwf_old_password"
            android:inputType="textPassword"
            style="@style/AppTheme.EditText"
            android:drawableLeft="@drawable/ic_old_password"
            android:nextFocusDown="@+id/et_confirm_password"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/et_new_password"
            android:hint="@string/upwf_new_password"
            android:inputType="textPassword"
            style="@style/AppTheme.EditText"
            android:drawableLeft="@drawable/ic_pre_password"
            android:nextFocusDown="@+id/btn_register"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/et_rep_new_password"
            android:hint="@string/upwf_rep_new_password"
            android:inputType="textPassword"
            style="@style/AppTheme.EditText"
            android:drawableLeft="@drawable/ic_password"
            android:nextFocusDown="@+id/btn_register"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_confirm"
        style="@style/AppTheme.Button"
        android:text="@string/upwf_change"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
