<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/content_left_padding"
    android:paddingLeft="@dimen/content_left_padding"
    android:paddingEnd="@dimen/content_left_padding"
    android:paddingRight="@dimen/content_left_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/of_notify_phone"
        style="@style/AppTheme.PreferencesSection"
        android:textColor="@android:color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv_notify_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="start"
            android:text="@string/pa_notify_phone_undefined"
            />

        <ImageButton
            android:id="@+id/ib_edit_notify_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_white"
            android:layout_gravity="top"
            android:contentDescription="@string/content_icon"

            style="@style/AppTheme.BorderlessButton"/>

    </LinearLayout>



</LinearLayout>